(issue 112) Added pagination and optimized code
